[package]
name = "keywatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", version = "0.3.2" }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus.git", version = "0.0.0" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus.git", version = "0.3.0" }
tokio = { version = "1.28.1", features = ["sync", "net"] }
crossbeam-channel = "0.5.8"
rdev = "0.5.2"
rodio = "0.17.1"
tokio-utils = "0.1.2"
futures-util = "0.3.28"
once_cell = "1.17.1"
